<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pablofranco.org.aplicacion_turismo_android.Login"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/flatlogin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:id="@+id/btnLogin"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:enabled="true"
        android:focusable="false"
        android:clickable="false"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:hint="@string/contraseña"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:enabled="true"
        android:layout_below="@+id/txtEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:hint="@string/correo"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:elegantTextHeight="false"
        android:enabled="true"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegistro"
        android:text="@string/registrarse"
        android:clickable="false"
        android:enabled="false"
        android:focusable="false"
        android:textColor="#ffffff"
        android:editable="false"
        android:textSize="23sp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAyuda"
        android:text="@string/necesitas_ayuda"
        android:textColor="#ffffff"
        android:enabled="false"
        android:clickable="false"

        android:textSize="20sp"
        android:layout_alignTop="@+id/txtRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />


</RelativeLayout>
